[package]
name = "vl53l3cx_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2"
rtt-target = { version = "0.3", features = ["cortex-m"] }
embedded-hal = "0.2"

[build-dependencies]
cc = "1.0"
bindgen = "0.60"